# beamterm

./: Cargo.toml
.github/workflows/: publish-renderer.yml
beamterm-core/: Cargo.toml
beamterm-core/src/gl/: atlas.rs  dynamic_atlas.rs  glyph_cache.rs  mod.rs  shaper.rs  terminal_grid.rs  texture.rs
beamterm-renderer/: Cargo.toml
beamterm-renderer/src/: terminal.rs  wasm.rs
beamterm-renderer/src/gl/: canvas_rasterizer.rs
beamterm-unicode/: Cargo.toml
beamterm-unicode/src/: lib.rs
examples/canvas_waves/: Cargo.toml
js/: README.md  package.json
