[workspace]
resolver = "2"
members = [
    "beamterm-atlas",
    "beamterm-core",
    "beamterm-data",
    "beamterm-rasterizer",
    "beamterm-renderer",
    "beamterm-unicode",
    "examples/game-console",
    "examples/native-terminal",
    "examples/terminal-emulator",
]
exclude = [
    "examples/canvas_waves",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
repository = "https://github.com/junkdog/beamterm"
homepage = "https://github.com/junkdog/beamterm"
documentation = "https://docs.rs/beamterm"
keywords = ["terminal", "webgl", "wasm", "rendering", "gpu"]
categories = ["graphics", "wasm", "web-programming"]

[workspace.dependencies]
bitflags = "2.11"
compact_str = "0.9.1"
console_error_panic_hook = "0.1.7"
glow = "0.17"
js-sys = "0.3.81"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
unicode-segmentation = "1.13.3"
unicode-width = { version = "0.2", features = ["core"] }
wasm-bindgen = { version = "0.2.106" }
web-sys = "0.3.81"

[workspace.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[workspace.lints.rust]
dead_code = "warn"
missing_docs = "warn"
unused_variables = "deny"
unused_imports = "deny"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_enum_variant = "warn"
manual_string_new = "warn"
needless_collect = "warn"
needless_return = "warn"
redundant_closure_for_method_calls = "warn"
type_complexity = "warn"
uninlined_format_args = "warn"

# performance / allocation
collection_is_never_read = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
needless_pass_by_value = "warn"
rc_buffer = "warn"
redundant_allocation = "warn"
trivially_copy_pass_by_ref = "warn"
vec_init_then_push = "warn"

# api surface
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
return_self_not_must_use = "warn"

# general quality
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
from_iter_instead_of_collect = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
semicolon_if_nothing_returned = "warn"
string_add_assign = "warn"
unused_self = "warn"

[profile.profiling]
inherits = "release"
debug = 2

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"
