[package]
name = "beamterm-core"
description = "Platform-agnostic OpenGL terminal renderer using glow"
readme = "../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
include = [
    "src/**/*.rs",
    "src/shaders/*",
    "tests/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[features]
default = []
native-dynamic-atlas = ["dep:beamterm-rasterizer"]
# Ligature-aware text shaping (GSUB) via rustybuzz. Enables multi-cell ligature
# glyphs when the atlas is given font bytes.
ligatures = ["dep:rustybuzz"]

[dependencies]
bitflags.workspace = true
beamterm-data = { path = "../beamterm-data", version = "1.0.0" }
beamterm-rasterizer = { path = "../beamterm-rasterizer", version = "1.0.0", optional = true }
beamterm-unicode = { path = "../beamterm-unicode", version = "1.0.0" }
compact_str = { workspace = true }
thiserror = { workspace = true }
unicode-width.workspace = true
glow.workspace = true
lru = "0.16"
rustc-hash = "2.1.1"
rustybuzz = { version = "0.20", optional = true }

[dev-dependencies]

[lints]
workspace = true
